<resources>
    <string name="facebook_app_id" translatable="false">2565192063792651</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2565192063792651</string>
    <string name="no_equalizer">No equalizer found.</string>
    <string name="no_audio_ID">Play a song first, then try again.</string>
    <string name="favourites">Favourites</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="sponsored">sponsored</string>
    <string name="label_share">Share</string>
    <string name="label_hide">Hide</string>
    <string name="label_add_to">Add to…</string>
    <string name="show_information">Show Information</string>
    <string name="label_play_next">Play next</string>
    <string name="common_more">More</string>
    <string name="common_turn_on">TURN ON</string>
    <string name="share_track_link_message">Here\'s a new song for you on <b>Mousiki</b> 🎧❀ヅ❤♫…%s.\n%s</string>
    <string name="cannot_extract_video_information_from_shared_link">Sorry, connot extract video information!</string>
    <string name="library">Library</string>
    <string name="video">Video</string>
    <string name="video_file_settings">Video files settings</string>
    <string name="library_recently_played">Recently played</string>
    <string name="library_favourites">Favourites</string>
    <string name="library_recent">Recent</string>
    <string name="library_heavy_songs">Heavy songs</string>
    <string name="library_heavy">Mostly played songs</string>
    <string name="library_empty_recent_list">Just start playing songs to see\n your recent tracks here!</string>
    <string name="library_empty_heavy_list">List is empty</string>
    <string name="library_empty_favourite_list">You can make any song as favourite, \n and you can access to it from here.</string>
    <string name="empty_favourite_list">No favourite track.</string>
    <string name="swipe_left_right">Swipe left or right to adjust video progress</string>
    <string name="swipe_up_down_left">Swipe up or down to adjust brightness</string>
    <string name="swipe_up_down_right">Swipe up or down to adjust volume</string>
    <string name="hold_screen">Hold to lock or unlock screen</string>
    <string name="double_click_next">Double tap to progress on 10 seconds</string>
    <string name="double_click_back">Double tap to progress back 10 seconds</string>
    <string name="got_it">Got it</string>
    <string name="common_empty_song_list">No song found</string>
    <string name="menu_settings">Settings</string>
    <string name="message_enable_draw">Please enable the "Draw over other apps" permission to start the floating player window.</string>
    <string name="message_enable_draw_over_apps_manually">Please go to settings and enable the "Draw over other apps" permission to start the floating player window.</string>
    <string name="title_button_set_timer">Set</string>
    <string name="loading">Loading…</string>
    <string name="error_while_loading_song_list">Error while loading songs list</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="settings_rate_app">Rate us</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_facebook_like">Like Facebook page</string>
    <string name="settings_policy">Privacy policy</string>
    <string name="settings_size_out_video">Video size</string>
    <string name="settings_choose_out_video_size">Choose video size</string>
    <string name="settings_share_app">Share app with friends</string>
    <string name="rate_app_give_rating">Rate 5 stars</string>
    <string name="rate_app_remind_me_later">Remind me later</string>
    <string name="rate_app_no_thanks">No, thanks</string>
    <string name="rate_app_dialo_title">Did you like this app? Please we need your support.</string>
    <string name="rate_app_dialog_message">It won\'t take more than a minute. Thanks for your support!</string>
    <string name="search">Search</string>
    <string name="search_button_title">Artists, songs, or podcasts</string>
    <string name="artists_find_an_artist">Find an artist</string>
    <string name="audio_duration_less_than">Filter audio files less than 60s</string>
    <string name="audio_size_less_than">Filter audio files less than 100k</string>
    <string name="video_duration_less_than">Filter video files less than 60s</string>
    <string name="video_size_less_than">Filter video files less than 100k</string>
    <string name="settings_pip">Picture-in-picture</string>
    <string name="version_available">v %s (&lt;u&gt;new version available&lt;/u&gt;)</string>
    <string name="last_version">v %s (latest version)</string>
    <string name="update">update</string>
    <string name="pip_dialog_title">Picture-in-picture</string>
    <string name="pip_dialog_mesage">Allow Mousiki app to create a picture-in-picture window while the app is open or after you leave it to continue watching youtube videos. This window displays on top of other apps you\'re using.</string>
    <string name="pip_dialog_checkbox_dont_ask_me_again">Don\'t ask me again</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="new_playlist">New playlist</string>
    <string name="create_playlist">Create playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="give_your_playlist_a_name">Give your playlist a name.</string>
    <string name="create">Create</string>
    <string name="remove_from_this_playlist">Remove from this playlist</string>
    <string name="remove_from_recently_played">Remove from recently played</string>
    <string name="playlist_favorite">Favourite</string>
    <string name="shuffle_play">Shuffle play</string>
    <string name="shuffle">Shuffle</string>
    <string name="play">Play</string>
    <string name="playlist_exist_message">Playlist %s existed</string>
    <string name="track_added_to_playlist">Added to %s</string>
    <string name="playlist_created">Playlist %s created</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="default_mode">System default</string>
    <string name="done">Done</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_dark_mode_theme">Choose theme</string>
    <string name="label_error">Error</string>
    <string name="label_developed_with_youtube_part1" translatable="false">Powered by</string>
    <string name="label_developed_with_youtube_part2" translatable="false">YouTube</string>
    <string name="btn_unfavorite">Unfavorite</string>
    <string name="label_no_songs">No song</string>
    <string name="action_delete">Delete</string>
    <string name="title_channels">Channels</string>
    <string name="title_videos">Videos</string>
    <string name="title_playlist">Playlists</string>
    <string name="btn_favorite">Favorite</string>
    <string name="btn_close">Close</string>
    <string name="title_discover">Discover</string>
    <string name="title_home">Home</string>
    <string name="btn_deny">DENY</string>
    <string name="btn_agree">AGREE</string>
    <string name="title_new_release">New Releases</string>
    <string name="title_top_charts">Top charts</string>
    <string name="no_connection">No connection</string>
    <string name="connection_back">Back online</string>
    <string name="question_feeling_about_app">How do you feel about using the Mousiki app ?</string>
    <string name="rate_app_happy">Happy</string>
    <string name="rate_app_mixed_feeling">Mixed feelings</string>
    <string name="rate_app_not_happy">Not happy</string>
    <string name="rate_app_message_play_store">So, you\'re pretty happy with Mousiki.\n\nWould you mind taking 1 minute to rate the app? We would love you forever if you give us 5 stars!</string>
    <string name="comment_about_app_dialog_title">How can we make you happy?</string>
    <string name="comment_about_app_dialog_subtitle">We would love to know how we can improve your experience.</string>
    <string name="common_later">Later</string>
    <string name="hint_your_comments">Your comments…</string>
    <string name="message_feedback_sent">Thank you for your feedback!.\nYour message has been sent to our support team.</string>
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what music is currently playing in Mousiki</string>
    <string name="player_notification_skip_to_previous">Skip to previous</string>
    <string name="player_notification_play">Play</string>
    <string name="player_notification_pause">Pause</string>
    <string name="player_notification_skip_to_next">Skip to next</string>
    <string name="player_add_to_favourite">Add to favourite</string>
    <string name="player_remove_from_favourite">Remove from favourite</string>
    <string name="send">Send</string>
    <string name="hint_your_feedback">Your feedback…</string>
    <string name="feedback_about_app_dialog_title">Give us feedback about a Mousiki feature?</string>
    <string name="feedback_about_app_dialog_message">Let us know how we can improve your Mousiki experience.</string>
    <string name="battery_saver_mode_request_change_settings">The Power Saving Mode needs the permission "modify system settings" to reduce the screen brightness. Please enable it on settings.</string>
    <string name="battery_saver_mode_instead_of_lock_screen">To meet YouTube Terms of Service, Mousiki cannot play music video in background. You can turn on the power saving mode to lock your screen.</string>
    <string name="label_slide_unlock">Slide to unlock</string>
    <string name="error_cannot_play_youtube_video">Sorry, this video cannot be played!</string>
    <string name="error_cannot_play_local_song">Sorry, this audio cannot be played!</string>
    <string name="app_shortcut_search">Search</string>
    <string name="app_shortcut_new_releases">Trending</string>
    <string name="video_size_small">Small</string>
    <string name="video_size_normal">Normal</string>
    <string name="video_size_large">Large</string>
    <string name="video_size_circular">Circular</string>
    <string name="exit">Exit</string>
    <string name="tool_tip_battery_saver">Click here to enable battery saver mode</string>
    <string name="queue">Queue</string>
    <string name="genre_music">Music</string>
    <string name="genre_mood">Mood</string>
    <string name="suggestion_history">History</string>
    <string name="suggestion_clear_history_button_title">Clear</string>
    <string name="confirm_clear_search_history_message">Are you sure you want to clear all search history?</string>
    <string name="tap_any_song_to_start_playing">Tap any song to start playing</string>
    <string name="internal_storage" translatable="false">Internal Storage</string>
    <string name="external_storage" translatable="false">SD Card</string>
    <string name="label_sort_a_z" translatable="false">A-Z</string>
    <string name="label_sort_z_a" translatable="false">Z-A</string>
    <string name="audio_file_settings">Audio files settings</string>
    <string name="local_songs_no_permission_title">Allow to play music?</string>
    <string name="local_songs_no_permission_description">Please allow Mousiki to access storage permission to play music</string>
    <string name="allow">Allow</string>
    <string name="label_sort_by">Sort by</string>
    <string name="label_sort_album">Album</string>
    <string name="label_sort_artist">Artist</string>
    <string name="label_sort_duration">Duration</string>
    <string name="label_sort_year">Year</string>
    <string name="confirm_delete_playlist">Do you want to delete this playlist: %s</string>
    <string name="label_sort_last_added">Last Added</string>
</resources>