<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/selector_ic_menu_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navMusic"
        android:icon="@drawable/ic_menu_music"
        android:title="@string/genre_music" />

    <item
        android:id="@+id/navLibrary"
        android:icon="@drawable/selector_ic_menu_library"
        android:title="@string/library" />

    <item
        android:id="@+id/navVideo"
        android:icon="@drawable/selector_ic_menu_video"
        android:title="@string/video" />

    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/selector_ic_menu_search"
        android:title="@string/search" />
</menu>