<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/spacing_xxx_large"
    tools:showIn="@layout/local_songs_fragment">

    <ImageView
        android:id="@+id/imgNoPermission"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxx_large"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:src="@drawable/ic_no_songs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/progress_gray" />

    <TextView
        android:id="@+id/txtAllowPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_x_large"
        android:fontFamily="@font/pangram_bold"
        android:text="@string/local_songs_no_permission_title"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNoPermission" />

    <TextView
        android:id="@+id/txtDescPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:alpha="0.6"
        android:fontFamily="@font/pangram_medium"
        android:gravity="center"
        android:text="@string/local_songs_no_permission_description"
        android:textColor="?colorOnSurface"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAllowPlay"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/btnAllowPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:fontFamily="@font/pangram_bold"
        android:text="@string/allow"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescPermission"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>